# curriculum

./: CONTRIBUTING.md  README.md
bitcoin-dojo/: README.md
bitcoin-dojo/week-01/exercises/: finite_fields.py
bitcoin-dojo/week-02/exercises/: elliptic_curves.py
decoding-bitcoin/: README.md
decoding-bitcoin/week-01/: README.md
decoding-bitcoin/week-01/exercises/: bitcoin_core_cli.md
decoding-bitcoin/week-02/: README.md
decoding-bitcoin/week-03/: README.md
decoding-bitcoin/week-04/: README.md
decoding-bitcoin/week-05/: README.md
decoding-bitcoin/week-06/: README.md
decoding-bitcoin/week-07/: README.md
decoding-bitcoin/week-08/: README.md
nostr-workshops/: README.md
privacy-track/: CONTRIBUTING.md  FACILITATOR_GUIDE.md  README.md
privacy-track/capstone/: README.md
privacy-track/module-01-chain-analysis/: README.md
privacy-track/module-02-silent-payments/: README.md
privacy-track/module-03-payjoin/: README.md
privacy-track/module-04-wallet-privacy/: README.md
privacy-track/phase-1-foundations/: README.md
privacy-track/phase-2-silent-payments/: README.md
privacy-track/phase-3-payjoin/: README.md
privacy-track/phase-3-payjoin/session-10-payjoin-dev-kit/pdk_integration/: Cargo.toml
privacy-track/phase-4-network-privacy/: README.md
privacy-track/phase-5-advanced/: README.md
privacy-track/phase-6-contributing/: README.md
privacy-track/resources/: glossary.md  reading-list.md
rawbit/: README.md
resources/: reading-list.md  tools-and-software.md
sovereign-bitcoiner/: README.md
(+12 files in other folders)
